examples/bad/unknown-fun-or-var/rec-lambda.oo
// recursive lambdas are not allowed

<(int) : int> sum = 
    (int i) : int -> { if (i == 1) return 1; else return i + sum(i-1); };
